test：添加单元测试

--- a/ruoyi-admin/pom.xml
+++ b/ruoyi-admin/pom.xml
@@ -78,6 +78,11 @@
             <groupId>com.ruoyi</groupId>
             <artifactId>ruoyi-generator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>text-module</artifactId>
+            <version>4.3.1</version>
+        </dependency>
 
     </dependencies>
 
