--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <commons.fileupload.version>1.3.3</commons.fileupload.version>
         <poi.version>3.17</poi.version>
         <velocity.version>1.7</velocity.version>
+        <testng.version>6.14.3</testng.version>
     </properties>
 
     <!-- 依赖声明 -->
@@ -200,6 +201,14 @@
                 <groupId>com.ruoyi</groupId>
                 <artifactId>ruoyi-common</artifactId>
                 <version>${ruoyi.version}</version>
+            </dependency>
+
+            <!--单元测试-->
+            <dependency>
+                <groupId>org.testng</groupId>
+                <artifactId>testng</artifactId>
+                <version>${testng.version}</version>
+                <scope>compile</scope>
             </dependency>
 
         </dependencies>
